1998-07-15  Roland McGrath  <roland@baalperazim.frob.com>

	* exec.c (do_exec): Set boot->phdr_addr and boot->user_entry after
	loading, to addresses adjusted for actual run-time load address.

Wed Aug 20 14:02:11 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* main.c (main): New args for
	ports_manage_port_operations_multithread.

1997-06-30  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (main): Arg parsing added.
	(argp_program_version): New variable.
	Include <argp.h>.

Mon Jan 20 16:16:33 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* hashexec.c (check_hashbang): `preempter' -> `preemptor'.

Sat Nov 23 16:26:55 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* priv.h (mach_host_elf_machine): New prototype.
	* hostarch.c: Include "priv.h".

Mon Nov 18 17:45:48 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* exec.c (load_section): If ANYWHERE, then make sure ADDR starts
	out at least past the first page, so that we don't take it.  Then
	the library can (if desired) make the page no-access.

Fri Nov 15 17:34:23 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* exec.c: Don't include <hurd/shared.h> any more.

	* main.c (S_exec_init): New arg syntax of trivfs_open.

Mon Oct  7 21:31:25 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* exec.c (fake_seek): New function.
	(prepare): Initialize E->stream.__io_funcs.seek to fake_seek; this
	is called now that stdio doesn't assume it always knows the file
	position.

Thu Sep 12 16:30:12 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(exec): Delete special dependencies.

Thu Sep  5 11:11:19 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* main.c: Include <version.h>.
	(exec_version): Delete variable.
 	(S_exec_init): Pass empty string as release; HURD_VERSION
	as version.

Thu Aug 29 13:00:38 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* priv.h: Only include <bfd.h> if BFD.  Only declare